--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@syncfusion/ej2-angular-calendars": "^20.4.52-ngcc",
+    "apexcharts": "^3.37.1",
     "bootstrap": "^5.2.3",
+    "ng-apexcharts": "^1.7.4",
     "popper": "^1.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
