--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@syncfusion/ej2-angular-calendars": "^20.4.52-ngcc",
+    "@syncfusion/ej2-angular-grids": "^20.4.54-ngcc",
     "apexcharts": "^3.37.1",
     "bootstrap": "^5.2.3",
     "ng-apexcharts": "^1.7.4",
